[package]
name = "gmod_e2_image"
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.72.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.4"
clap = { version = "4.4.3", features = ["derive"] }
image = "0.24.7"
texpresso = "2.0.1"
